--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
         </div>
 
-        <div class="der">
+        <div>
           <ul>
             <li><a href="#">
                 <img id="logo-conicet" class="img-fluid" src="logoConicet.jpg" alt="Conicet">
