--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- Content -->
   <div class="header">
-    <img class="logo" src="logo-ARGENTINA-PROGRAMA.jpg" alt="Logo Argentina Programa">
+    <img class="logo-arg-prog" src="logo-arg-prog.jpg" alt="Logo Argentina Programa">
     <a name="" id="login" class="btn btn-light float-end" href="#" role="button">Login</a>
     <a href="#"><img id="logo-ig" class="img-fluid float-end" src="logo-ig.png" alt="Logo IG"></a>
     <a href="#"><img id="logo-fb" class="img-fluid float-end" src="logo-fb.png" alt="Logo FB"></a>
@@ -32,7 +32,7 @@
         <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
       </div>
 
-      <div class="container">
+      <div class="container-fluid">
 
         <div style="float:left">
           <h1>Agustin Forchetti</h1>
