--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <div>
       <div>
         <div>
-          <img id=logo-arg-programa-2 class="img-fluid" src="logo-ARGENTINA-PROGRAMA.jpg" alt="UNL">
+          <img id=logo-arg-programa-2 class="img-fluid" src="logo-arg-prog.jpg" alt="UNL">
         </div>
         <div style="float:left">
           <h4>Portfolio Web Argentina Programa</h4>
