--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="card mat-card" id="first-card">
-    <div id="profile-background"><img src="Banner.jpg" alt="Banner"></div>
+    <div id="profile-background"><img src="Banner.jpg" class="img-fluid" alt="Banner"></div>
     <div id="info" style="padding: 16px">
       <div id="info-img">
         <img class="profile-image" src="perfil.jpeg" alt="Perfil">
