--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
 
 <body>
   <!-- Content -->
-  <div class="header">
+<div class="header">
+<div class="row">
+  <div class="col">
     <img class="logo-arg-prog" src="logo-arg-prog.jpg" alt="Logo Argentina Programa">
+  </div>
+  <div class="col">
     <a name="" id="login" class="btn btn-light float-end" href="#" role="button">Login</a>
     <a href="#"><img id="logo-ig" class="img-fluid float-end" src="logo-ig.png" alt="Logo IG"></a>
     <a href="#"><img id="logo-fb" class="img-fluid float-end" src="logo-fb.png" alt="Logo FB"></a>
   </div>
+  </div>
+</div>
 
   <div class="card mat-card" id="first-card">
     <div id="profile-background"><img src="Banner.jpg" class="img-fluid" alt="Banner"></div>
