--- a/index.html
+++ b/index.html
@@ -16,25 +16,27 @@
 
 <body>
   <!-- Content -->
-<div class="header">
-<div class="row">
-  <div class="col">
-    <img class="logo-arg-prog" src="logo-arg-prog.jpg" alt="Logo Argentina Programa">
-  </div>
-  <div class="col">
-    <div class="scrolldown">
-      <span></span>
-      <span></span>
-      <span></span>
+  <div class="header">
+    <div class="row">
+      <div class="col">
+        <img class="logo-arg-prog" src="logo-arg-prog.jpg" alt="Logo Argentina Programa">
+      </div>
+      <div class="col">
+        <div class="scrolldown">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <div class="col">
+        <a name="" id="login" class="btn btn-light float-end" href="#" role="button">Login</a>
+        <a href="https://www.instagram.com/"><img id="logo-ig" class="img-fluid float-end" src="logo-ig.png"
+            alt="Logo IG"></a>
+        <a href="https://es-la.facebook.com/agustin.forchetti"><img id="logo-fb" class="img-fluid float-end"
+            src="logo-fb.png" alt="Logo FB"></a>
+      </div>
     </div>
   </div>
-  <div class="col">
-    <a name="" id="login" class="btn btn-light float-end" href="#" role="button">Login</a>
-    <a href="#"><img id="logo-ig" class="img-fluid float-end" src="logo-ig.png" alt="Logo IG"></a>
-    <a href="#"><img id="logo-fb" class="img-fluid float-end" src="logo-fb.png" alt="Logo FB"></a>
-  </div>
-  </div>
-</div>
 
   <div class="card mat-card" id="first-card">
     <div id="profile-background"><img src="Banner.jpg" class="img-fluid" alt="Banner"></div>
@@ -47,10 +49,10 @@
         </div>
         <div class="col">
           <div class="btn-edit"><a href="#" class="btn-right float-end"><i class="fas fa-pen"></i></a></div><br>
-          <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>  
+          <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
         </div>
       </div>
-      
+
 
       <div class="container-fluid">
 
@@ -62,18 +64,18 @@
           <div id="info-contact">
             <h5>Santa Fe</h5>
             <h6>Argentina</h6><br>
-            <span><a href="#">Información de contacto</a></span>
+            <span><a href="https://ar.linkedin.com/in/agustinforchetti">Información de contacto</a></span>
           </div>
         </div>
 
         <div>
           <ul>
-            <li><a href="#">
+            <li><a href="https://www.conicet.gov.ar/new_scp/detalle.php?id=52556&datos_academicos=yes">
                 <img id="logo-conicet" class="img-fluid" src="logoConicet.jpg" alt="Conicet">
                 <h6>CONICET</h6>
               </a>
             </li>
-            <li><a href="#">
+            <li><a href="https://www.unl.edu.ar/">
                 <img id="logo-unl" class="img-fluid" src="logoUnl.jpg" alt="UNL">
                 <h6>Universidad Nacional del Litoral</h6>
               </a>
@@ -170,9 +172,9 @@
         <img id=logo-unl-2 class="img-fluid" src="logoUnl.jpg" alt="UNL">
       </div>
       <div>
-        <h4>UNL</h4>
+        <h4><b>UNL</b></h4>
         <h5>Doctor en Ingeniería Química</h5>
-        <h6>2017-2022</h6>
+        <h6><em>2017-2022</em></h6>
       </div>
     </div>
 
@@ -181,9 +183,9 @@
         <img id=logo-unl-2 class="img-fluid" src="logoUnl.jpg" alt="UNL">
       </div>
       <div>
-        <h4>UNL</h4>
+        <h4><b>UNL</b></h4>
         <h5>Ingeniero Químico</h5>
-        <h6>2011-2027</h6>
+        <h6><em>2011-2027</em></h6>
       </div>
     </div>
   </div>
@@ -324,7 +326,7 @@
           <h4>Portfolio Web Argentina Programa</h4>
           <h5>2022</h5>
           <p>Desarrollo de Portfolio Web Personal en el marco del Programa #YoProgramo</p>
-          <a href="https://agforca.github.io/proyecto/">Link al Proyecto</a>
+          <a href="https://agforca.github.io/proyecto/">Link al Porfolio Web</a>
         </div>
       </div>
     </div>
