--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
         <div class="card-titles">
           <h2>Acerca de</h2>
         </div>
+        <div>
+          <p id="text-acercade">Ingeniero Químico. Doctor en Ingeniería Química pronto.</p>
+        </div>
+        <div>
+          <input id="edit-acercade" type="text" oninput="myFunction2(this.value)" style="display:none">
+        </div>
       </div>
       <div class="col">
         <div class="btn-edit" onclick="cambiar_parrafo()">
@@ -107,16 +113,8 @@
           </a>
         </div><br>
         <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
-
-        <div>
-          <input id="edit-acercade" type="text" onimput="myFunction2(this.value)" style="display:none">
-        </div>
       </div>
     </div>
-    <div>
-      <p id="text-acercade">Ingeniero Químico. Doctor en Ingeniería Química pronto.</p>
-    </div>
-
   </div>
 
   <div class="card mat-card" id="third-card">
@@ -185,7 +183,7 @@
       <div>
         <h4><b>UNL</b></h4>
         <h5>Ingeniero Químico</h5>
-        <h6><em>2011-2027</em></h6>
+        <h6><em>2011-2017</em></h6>
       </div>
     </div>
   </div>
@@ -210,28 +208,44 @@
     <div>
 
       <div class="container">
-        <h5>Skill 1</h5>
+        <h5>Office 365</h5>
         <div class="progress">
-          <div class="progress-bar bg-primary progress-bar-striped progress-bar-animated" role="progressbar"
-            style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
+          <div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar"
+            style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
         </div>
       </div><br><br>
 
 
       <div class="container">
-        <h5>Skill 2</h5>
+        <h5>Science Databases</h5>
         <div class="progress">
           <div class="progress-bar bg-secondary progress-bar-striped progress-bar-animated" role="progressbar"
-            style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
         </div>
       </div><br><br>
 
 
       <div class="container">
-        <h5>Skill 3</h5>
+        <h5>Origin Software</h5>
         <div class="progress">
           <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar"
-            style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+            style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">65%</div>
+        </div>
+      </div><br><br>
+
+      <div class="container">
+        <h5>Team Managment</h5>
+        <div class="progress">
+          <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar"
+            style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+        </div>
+      </div><br><br>
+
+      <div class="container">
+        <h5>Research and Development</h5>
+        <div class="progress">
+          <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar"
+            style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
         </div>
       </div>
     </div>
@@ -359,8 +373,9 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
     crossorigin="anonymous"></script>
   <script>
+
     function cambiar_parrafo() {
-      document.getElementById("edit-acercade").style.display = "block";
+      document.getElementById("edit-acercade").style.display ="block";
       let texto = document.getElementById("text-acercade").innerText;
       console.log(texto);
     };
@@ -368,6 +383,19 @@
     function myFunction2(valor) {
       document.getElementById("text-acercade").innerText = valor;
     };
+
+    function logMessage(message) {
+      console.log(message + "<br>");
+    }
+
+    let textarea = document.getElementById("edit-acercade")
+    textarea.addEventListener('keyup', (e) => {
+      logMessage('Key "${e.key}" released [event: keyup]');
+      if (e.key=="Enter") {
+        document.getElementById("edit-acercade").style.display="none"
+      }
+    });
+  
   </script>
 </body>
 
