--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
           <img id=logo-intec class="img-fluid" src="logo-intec.png" alt="UNL">
         </div>
         <div>
-          <h4>INTEC (UNL-CONICET)</h4>
+          <h4><b>INTEC (UNL-CONICET)</b></h4>
           <h5>Becario Doctoral</h5>
-          <h6>2017-2022</h6>
+          <h6><em>2017-2022</em></h6>
         </div>
       </div>
     </div>
