--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           </div>
         </div>
         <div class="col">
-          <div class="btn-edit"><a href="#" class="btn-right float-end"><i class="fas fa-pen"></i></a></div><br>
-          <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
+          <div class="btn-edit float-end"><i class="fas fa-pen"></i></div><br>
+          <div class="btn-del float-end"><i class="fas fa-times"></i></div>
         </div>
       </div>
 
@@ -107,12 +107,10 @@
         </div>
       </div>
       <div class="col">
-        <div class="btn-edit" onclick="cambiar_parrafo()">
-          <a href="#" class="btn-right float-end">
-            <i class="fa fa-pen"></i>
-          </a>
+        <div class="btn-edit float-end" onclick="cambiar_parrafo()">
+          <i class="fa fa-pen"></i>          
         </div><br>
-        <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
+        <div class="btn-del float-end"><i class="fas fa-times"></i></div>
       </div>
     </div>
   </div>
@@ -125,12 +123,10 @@
         </div>
       </div>
       <div class="col">
-        <div class="btn-edit" onclick="cambiar_parrafo()">
-          <a href="#" class="btn-right float-end">
-            <i class="fa fa-pen"></i>
-          </a>
+        <div class="btn-edit float-end" onclick="cambiar_parrafo()">
+          <i class="fa fa-pen"></i>
         </div><br>
-        <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
+        <div class="btn-del float-end"><i class="fas fa-times"></i></div>
       </div>
     </div>
 
@@ -156,12 +152,10 @@
         </div>
       </div>
       <div class="col">
-        <div class="btn-edit" onclick="cambiar_parrafo()">
-          <a href="#" class="btn-right float-end">
+        <div class="btn-edit float-end" onclick="cambiar_parrafo()">
             <i class="fa fa-pen"></i>
-          </a>
         </div><br>
-        <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
+        <div class="btn-del float-end"><i class="fas fa-times"></i></div>
       </div>
     </div>
 
@@ -196,12 +190,10 @@
         </div>
       </div>
       <div class="col">
-        <div class="btn-edit" onclick="cambiar_parrafo()">
-          <a href="#" class="btn-right float-end">
+        <div class="btn-edit float-end" onclick="cambiar_parrafo()">          
             <i class="fa fa-pen"></i>
-          </a>
         </div><br>
-        <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
+        <div class="btn-del float-end"><i class="fas fa-times"></i></div>
       </div>
     </div>
 
@@ -259,12 +251,10 @@
         </div>
       </div>
       <div class="col">
-        <div class="btn-edit" onclick="cambiar_parrafo()">
-          <a href="#" class="btn-right float-end">
+        <div class="btn-edit float-end" onclick="cambiar_parrafo()">
             <i class="fa fa-pen"></i>
-          </a>
         </div><br>
-        <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
+        <div class="btn-del float-end"><i class="fas fa-times"></i></div>
       </div>
     </div>
 
@@ -322,12 +312,10 @@
         </div>
       </div>
       <div class="col">
-        <div class="btn-edit" onclick="cambiar_parrafo()">
-          <a href="#" class="btn-right float-end">
+        <div class="btn-edit float-end" onclick="cambiar_parrafo()">
             <i class="fa fa-pen"></i>
-          </a>
         </div><br>
-        <div class="btn-del"><a href="#" class="btn-right float-end"><i class="fas fa-times"></i></a></div>
+        <div class="btn-del float-end"><i class="fas fa-times"></i></div>
       </div>
     </div>
 
